[tool.poetry]
name = "ppo-procgen-reproduction"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
stable-baselines3 = "^1.1.0"
procgen = "^0.10.4"
tensorboard = "^2.6.0"
wandb = "^0.12.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
